sas-core/main/default/objects/Insurance_Detail__c/Insurance_Detail__c.object-meta.xml
<CustomObject>
    <label>Insurance Detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Insurance Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>