sas-core/main/default/objects/Insurance_Detail__c/fields/Deductible_Baggage__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Baggage__c</fullName>
    <label>Deductible Baggage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>