sas-core/main/default/objects/Insurance_Detail__c/fields/Total_Amount_Baggage__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Baggage__c</fullName>
    <label>Total Amount Baggage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>