sas-core/main/default/objects/Insurance_Detail__c/fields/Total_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Total_Deductible__c</fullName>
    <label>Total Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>